--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -148,9 +148,9 @@
                                                 <tbody>
                                                     @foreach (var asign in ViewBag.Asignaciones)
                                                     {
-                                                        @asign.IdAsignacion = asign.IdAsignacion + 1;
+                                                        @*@asign.IdAsignacion= asign.IdAsignacion + 1;*@
                                                         <tr>
-                                                            <td>@asign.IdAsignacion</td>
+                                                            @*<td>@asign.IdAsignacion</td>*@
                                                             <td>@asign.Chofer </td>
                                                             <td>@asign.Vehiculo</td>
                                                             <td>
