AMGO - Avance de Fix a Equipo de Transporte

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -154,7 +154,7 @@
                                                             <td>@asign.Chofer </td>
                                                             <td>@asign.Vehiculo</td>
                                                             <td>
-                                                                <a href="@Url.Action("Eliminar", "Asignacion", new { Id = asign.IdAsignacion })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                <a href="@Url.Action("Eliminar", "Asignacion", new { Id = asign.IdVehiculo, TV = asign.TipoVehiculo })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                     <i class="material-icons">delete</i>
                                                                     <span>Eliminar producto</span>
                                                                 </a>
