--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/VentaPuntoVentaDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/VentaPuntoVentaDTO.cshtml
@@ -1,7 +1,10 @@
 ﻿@model MVC.Presentacion.Models.Ventas.VentaPuntoVentaDTO
 @Html.HiddenFor(x => x.FolioVenta)
-<tr>
-    <th>@Model.IdCliente</th>
+@Html.HiddenFor(x => x.IdCliente)
+@Html.HiddenFor(x => x.Total)
+@Html.HiddenFor(x => x.RFC)
+@Html.HiddenFor(x => x.seleccionar)
+<tr>  
     <th>@Model.FolioVenta</th>
     <td>@Model.Total</td>
     <td>@Model.RFC</td>
