JSA - Avance Facturacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
@@ -1,6 +1,5 @@
-﻿@using MVC.Presentacion.Models.Catalogos
+﻿@model  MVC.Presentacion.Models.Catalogos.ClientesDto
 
-@model  ClientesModel
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
