--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
@@ -85,7 +85,7 @@
 
                                 </div>
                                 <div class="col-md-2" style="top:10px">
-                                    <button id="btnUpDate" formaction=@Url.Action("Facturar") class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                    <button id="btnUpDate" formaction=@Url.Action("Facturar") class="btn btn-primary btn-icon-mini btn-round">
                                         Facturar
                                     </button>
                                 </div>
