--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -45,8 +45,17 @@
                                                 </a>
                                             </div>
                                         </li>
+                                        <li>
+                                            <div class="demo-google-material-icon">
+                                                <a href="@Url.Action("Index", "Facturacion")">
+                                                    <i class="material-icons">monetization_on</i> 
+                                                    <span class="icon-name">Facturación</span>                                                   
+                                                </a>
+                                            </div>
+                                        </li>
                                     </ul>
-                                    <ul></ul>
+                                    <ul>                                        
+                                    </ul>
                                 </div>
                             </div>
                         </div>
