JSA - Avance Facturacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Index.cshtml
@@ -24,6 +24,7 @@
 <body>
     @using (Html.BeginForm("Buscar", "Facturacion", FormMethod.Post))
     {
+        @Html.HiddenFor(m => m.Cliente)
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
