--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -82,7 +82,7 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <b>Proveedor:</b>&nbsp;
+                                            <b>Proveedor: </b>
                                             <label>@Model.Proveedor </label>
                                         </div>
                                     </div>
@@ -108,7 +108,6 @@
                                                     <td><strong>%Ieps</strong></td>
                                                     <td><strong>Importe</strong></td>
                                                 }
-
                                             </tr>
                                         </thead>
                                         <tbody>
